Cores e Fontes adicionados ao CSS

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@import url(utilitys.css);
+
 *, *::before, *::after{
   margin: 0;
   padding: 0;
@@ -7,4 +9,29 @@
 :root{
 
   /* Cores */
+  --bg-primary: #f4f5fb;
+  --bg-secondary: #ffffff;
+  --color-brand: #ca3884;
+  --brand-hover: #a52c6b;
+  --danger: #c93847;
+  --content-primary: #080b12;
+  --content-secondary: #374151;
+  --content-tertiary: #9ca3af;
+  --bd-primary: #d1d5db;
+  --bd-hover: #b9c2d0;
+
+  /* Fontes */
+  --fonte-family: "Inter", sans-serif;
+  --title: 600 1.5rem/2rem var(--font-family);
+  --label: 550 1rem/1.25rem var(--font-family);
+  --parag: 500 1rem/1.25rem var(--font-family);
+  --link-sm: 500 0.875rem/1rem var(--font-family);
+
+  /* Tamanhos */
+  --max-width: 23,4375rem;
+
+}
+
+body{
+  background-color: var(--bd-primary);
 }
