CSS do Main Finalizado

--- a/css/utilitys.css
+++ b/css/utilitys.css
@@ -1,3 +1,15 @@
 ul[role="list"]{
   list-style: none;
 }
+
+.deletar{
+  display: none;
+}
+
+.esconder-mobile{
+  display: none;
+}
+
+.show-exc{
+  display: flex;
+}
