CSS dos inputs e botões organizados

--- a/css/global.css
+++ b/css/global.css
@@ -17,6 +17,7 @@
   --content-tertiary: #9ca3af;
   --bd-primary: #d1d5db;
   --bd-hover: #b9c2d0;
+  --text-white: #ffffff;
 
   /* Fontes */
   --fonte-family: "Inter", sans-serif;
@@ -67,5 +68,47 @@ main{
       color: var(--content-primary);
     }
 
+  }
+}
+
+form {
+  display: grid;
+  gap: 1rem;
+
+  & input{
+    width: 100%;
+    height: 2.75rem;
+    border-radius: 0.75rem;
+    border: 2px solid var(--bd-primary);
+    padding-left: 1rem;
+    background-color: var(--bg-secondary);
+    transition: border 400ms ease;
+
+    &::placeholder{
+      color: var(--content-tertiary);
+    }
+
+    &:hover{
+      border-color: var(--bd-hover);
+    }
+
+    &:focus{
+      border: 2px solid var(--color-brand);
+    }
+  }
+
+  & button{
+    cursor: pointer;
+    height: 2.75rem;
+    border-radius: 0.75rem;
+    border: none;
+    background-color: var(--color-brand);
+    color: var(--text-white);
+    font: var(--label);
+    transition: background-color 400ms ease;
+
+    &:hover{
+      background-color: var(--brand-hover);
+    }
   }
 }
