--- a/css/global.css
+++ b/css/global.css
@@ -112,3 +112,105 @@ form {
     }
   }
 }
+
+.item{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.75rem;
+  width: 100%;
+  height: 3rem;
+  background-color: var(--bg-secondary);
+  border-radius: 0.75rem;
+  color: var(--content-secondary);
+  font: var(--parag);
+
+  & div{
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+
+    & input{
+      all: unset;
+      width: 1rem;
+      height: 1rem;
+      background-color: var(--bg-secondary);
+      border: 1px solid var(--bd-primary);
+      border-radius: 0.35rem;
+      transition: border-color 300ms ease;
+
+      &:hover[
+        border-color: var(--bd-hover);
+      ]
+
+      &:checked{
+        background: url(./icons/state=selected.svg);
+        background-size: 120%;
+        background-position: 50%;
+      }
+    }
+  }
+
+  & button{
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    transition: scale 400ms ease;
+
+    &:hover{
+      scale: 1.2;
+    }
+  }
+}
+
+& img{
+  width: 1rem;
+  aspect-ratio: 1;
+}
+
+.alert {
+  display: flex;
+  width: 100%;
+  height: 2.75rem;
+  background-color: var(--danger);
+  border-radius: .75rem;
+  justify-content: space-between;
+  padding: .75rem;
+
+  & div {
+      font: var(--label);
+      color: var(--bg-secondary);
+      display: flex;
+      align-items: center;
+      gap: .5rem;
+  }
+
+  & button {
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
+      transition: scale 400ms ease;
+      &:hover {
+         scale: 1.2;
+     }
+ }
+
+}
+
+.error {
+  margin-top: .25rem;
+  margin-left: .5rem;
+  display: flex;
+  align-items: center;
+  gap: .25rem;
+  font: var(--link-sm);
+  color: var(--danger);
+  & img {
+      width: 1rem;
+      aspect-ratio: 1;
+  }
+}
+
+.danger {
+  border-color: var(--danger);
+} 
